Align topbar right section to top

--- a/client/assets/css/topbar.css
+++ b/client/assets/css/topbar.css
@@ -51,6 +51,8 @@
   justify-content: flex-end;
   flex-wrap: wrap;
   align-items: flex-start; /* Вирівнюємо всі елементи згори, щоб селекти зі своїми підписами стояли на одній лінії */
+  align-content: flex-start; /* Додаємо вирівнювання рядків флексу до верхнього краю, аби друга лінія елементів не "провисала" */
+  align-self: start; /* Примушуємо всю праву колонку стати по верхньому краю ґрід-рядка, як і ліву секцію */
 }
 
 /* Підпис та інпут обгорнуті у label, щоб клік по тексту активував поле */
