--- a/templates/maya-date.min.html
+++ b/templates/maya-date.min.html
@@ -39,9 +39,9 @@
         "@type": "BreadcrumbList",
         "itemListElement": [
           { "@type": "ListItem", "position": 1, "name": "Головна", "item": "{{SITE_ORIGIN}}/" },
-          { "@type": "ListItem", "position": 2, "name": "Майя", "item": "{{SITE_ORIGIN}}/maya/" },
-          { "@type": "ListItem", "position": 3, "name": "{{DATE_YEAR}}", "item": "{{SITE_ORIGIN}}/maya/{{DATE_YEAR}}/" },
-          { "@type": "ListItem", "position": 4, "name": "{{DATE_MM}}", "item": "{{SITE_ORIGIN}}/maya/{{DATE_YEAR}}/{{DATE_MM}}/" },
+          { "@type": "ListItem", "position": 2, "name": "Майя", "item": "{{SITE_ORIGIN}}{{CANONICAL_PREFIX}}/" },
+          { "@type": "ListItem", "position": 3, "name": "{{DATE_YEAR}}", "item": "{{SITE_ORIGIN}}{{CANONICAL_PREFIX}}/{{DATE_YEAR}}/" },
+          { "@type": "ListItem", "position": 4, "name": "{{DATE_MM}}", "item": "{{SITE_ORIGIN}}{{CANONICAL_PREFIX}}/{{DATE_YEAR}}/{{DATE_MM}}/" },
           { "@type": "ListItem", "position": 5, "name": "{{DATE_DD}}", "item": "{{CANONICAL_URL}}" }
         ]
       }
@@ -85,7 +85,7 @@
         <li><strong>Тон:</strong> {{TONE}}</li>
         <li><strong>Підказка дня:</strong> {{ADVICE_SHORT}}</li>
       </ul>
-      <p><a class="cta" href="/?date={{DATE_ISO}}">Відкрити інтерактивну версію</a></p>
+      <p><a class="cta" href="{{SITE_ORIGIN}}/?date={{DATE_ISO}}">Дізнатись більше</a></p>
     </section>
 
     <!-- optional glyph image preview (static) -->
